task5/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-dem
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: flask-dem
