task5/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  selector:
    app: nginx-pod
  clusterIP: None
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: dev
spec:
  selector:
    app: demo-pod
  clusterIP: None
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 8888
