task5/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  ports:
    - port: 5000
      nodePort: 30166
      name: http
  selector:
    app: mock-api
